radv: images don't always have extents in RGP
Sometimes the width/height show up as 0, but it's inconsistent.
https://gitlab.freedesktop.org/zmike/dumps/-/blob/master/bioshock_infinite.rgp
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Sometimes the width/height show up as 0, but it's inconsistent.
https://gitlab.freedesktop.org/zmike/dumps/-/blob/master/bioshock_infinite.rgp